--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-  acm -- acyclic complexity measure
+  ahm -- acyclic complexity measure
 
 SYNOPSIS
-  acm [-a] [-c] [-t]
+  ahm [-a] [-c] [-t]
 
 DESCRIPTION
   Static analysis automate code complexity measure for C style code (C, C++, C#, javascript, java).
