removed wrapping O() notation brackets

--- a/README
+++ b/README
@@ -5,12 +5,12 @@ SYNOPSIS
       ahm [-a] [-c] [-f] [-h] [-q] [-v]
 
 DESCRIPTION
-      Static code complexity analyser for c-family syntax (C, C++, Java, ECMAScript, C#, &c)
+      Static code complexity analyser for c-family syntax (C, C++, Java, ECMAScript, C#, ...)
       it parses conditions of a standard data input stream (stdin) for leveraging an absolute number.
 
-      -a      acyclic complexity, regards nested c-family syntax (O(n^2)
-      -c      cyclomatic complexity, condition count (O(n))
-      -f      control flow sub path conjecture O(2n)
+      -a      acyclic complexity, regards nested c-family syntax, O(n^2)
+      -c      cyclomatic complexity, condition count, O(n)
+      -f      control flow sub path conjecture, O(2n)
       -h, --help  show this help message
-      -q      all sub paths O(2^n)
+      -q      all sub paths, O(2^n)
       -v      verify condition paths
