--- a/README
+++ b/README
@@ -2,16 +2,17 @@ NAME
       ksi -- code complexity measure
 
 SYNOPSIS
-      ksi [-c] [-f] [-h] [-k] [-p] [-q] [-v]
+      ksi [-c] [-f FILE] [-g] [-h] [-k] [-p] [-q] [-v]
 
 DESCRIPTION
       Static code complexity analyser for c-family syntax (C, C++, Java, ECMAScript, C#, ...)
       it parses decisions of a standard data input stream (stdin) and calculates an absolute number.
 
-      -c      cyclomatic complexity, condition count, O(n)
-      -f      control flow sub path conjecture, O(2n)
-      -h, --help  show this help message
-      -k      ksi complexity, regards nested c-family syntax, O(n^2)
-      -p      ksi path vector
-      -q      all sub paths, O(2^n)
-      -v      verify condition paths
+      -c            cyclomatic complexity, condition count, O(n)
+      -f, --file    read one or more newline separated patterns from file
+      -g            control flow path conjecture, O(2n)
+      -h, --help    show this help message
+      -k            ksi complexity, regards nested c-family syntax, O(n^2)
+      -p            ksi path vector
+      -q            all sub paths, O(2^n)
+      -v            verify condition paths
