--- a/README
+++ b/README
@@ -12,7 +12,7 @@ DESCRIPTION
       -f, --file    read one or more newline separated patterns from file
       -g            control flow path conjecture, O(2n)
       -h, --help    show this help message
-      -k            ksi complexity, regards nested c-family syntax, O(n^2)
-      -p            ksi path vector
+      -k            kso complexity, regards nested c-family syntax, O(n^2)
+      -p            kso path vector
       -q            all sub paths, O(2^n)
       -v            verify condition paths
