--- a/README
+++ b/README
@@ -5,11 +5,11 @@ SYNOPSIS
       clue [-c] [-f FILE] [-g] [-h] [-k] [-p] [-q] [-v]
 
 DESCRIPTION
-      Static code inspection instrument, analyses complexity for c-family syntax (C, C++, Java, ECMAScript, C#, ...)
-      it parses decisions of a standard data input stream (stdin) and calculates absolute numbers.
+      Static code inspection instrument analysing complexity of c-family syntax (C, C++, Java, ECMAScript, C#, ...)
+      construing source code of standard data input streams (stdin) into absolute measures.
 
       -c            cyclomatic complexity, condition count, O(n)
-      -f, --file    read one or more newline separated lines from file
+      -f, --file    read from file
       -g            control flow path conjecture, O(2n)
       -h, --help    show this help message
       -k            clue complexity, regards nested c-family syntax, O(n^2)
