--- a/README
+++ b/README
@@ -5,14 +5,14 @@ SYNOPSIS
       clue [-c] [-f FILE] [-g] [-h] [-k] [-p] [-q] [-v]
 
 DESCRIPTION
-      Static code inspection instrument, analyses complexity for c-family syntax (C, C++, Java, ECMAScript, C#, ...)
-      it parses decisions of a standard data input stream (stdin) and calculates absolute numbers.
+      Static code inspection instrument, analyses complexity for c-family syntax (C, C++, Java, ECMAScript, C#, etc.),
+       construing source code of standard data input streams (stdin) into absolute measures.
 
-      -c            cyclomatic complexity, condition count, O(n)
       -f, --file    read one or more newline separated lines from file
-      -g            control flow path conjecture, O(2n)
-      -h, --help    show this help message
-      -k            clue complexity, regards nested c-family syntax, O(n^2)
-      -p            clue path
-      -q            all sub paths, O(2^n)
       -v            verify clue path
+      -g            control flow path conjecture, O(2n)
+      -p            clue path
+      -k            clue complexity, regards nested c-family syntax, O(n^2)
+      -q            all sub paths, O(2^n)
+      -c            cyclomatic complexity, condition count, O(n)
+      -h, --help    show this help message
